Доверстал отображение списка заявок: - добавил кнопки и подпись о том, что это за таблица - поменял ListView на DataGrid для отображения таблицы - добавил в Application "вычислительное свойство", которое выдаёт общую сумму всех услуг по данной заявке - добавил в Client свойство FIO, возращающее ФИО клиента

--- a/SolickManagerV3_4/SolickManagerV3_4.csproj
+++ b/SolickManagerV3_4/SolickManagerV3_4.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Pages\Add.png" />
+    <None Remove="Pages\AddButton.png" />
+    <None Remove="Pages\Delete.png" />
+    <None Remove="Pages\Edit.png" />
     <None Remove="Windows\Images\LoadingBackGround.png" />
     <None Remove="Windows\Images\LoadingKrutVert.png" />
   </ItemGroup>
@@ -21,6 +25,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Pages\Add.png" />
+    <Resource Include="Pages\AddButton.png" />
+    <Resource Include="Pages\Delete.png" />
+    <Resource Include="Pages\Edit.png" />
+    <Resource Include="Pages\Images\AddButton.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Windows\Images\LoadingBackGround.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
