--- a/SolickManagerV3_4/SolickManagerV3_4.csproj
+++ b/SolickManagerV3_4/SolickManagerV3_4.csproj
@@ -9,7 +9,6 @@
 
   <ItemGroup>
     <None Remove="Pages\Add.png" />
-    <None Remove="Pages\AddButton.png" />
     <None Remove="Pages\Delete.png" />
     <None Remove="Pages\Edit.png" />
     <None Remove="Windows\Images\LoadingBackGround.png" />
@@ -26,12 +25,10 @@
 
   <ItemGroup>
     <Resource Include="Pages\Add.png" />
-    <Resource Include="Pages\AddButton.png" />
-    <Resource Include="Pages\Delete.png" />
-    <Resource Include="Pages\Edit.png" />
-    <Resource Include="Pages\Images\AddButton.png">
+    <Resource Include="Pages\Delete.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Pages\Edit.png" />
     <Resource Include="Windows\Images\LoadingBackGround.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
