--- a/SolickManagerV3_4/SolickManagerV3_4.csproj
+++ b/SolickManagerV3_4/SolickManagerV3_4.csproj
@@ -11,6 +11,7 @@
     <None Remove="Pages\Add.png" />
     <None Remove="Pages\Delete.png" />
     <None Remove="Pages\Edit.png" />
+    <None Remove="Windows\Exit2.png" />
     <None Remove="Windows\Images\LoadingBackGround.png" />
     <None Remove="Windows\Images\LoadingKrutVert.png" />
   </ItemGroup>
@@ -29,6 +30,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Pages\Edit.png" />
+    <Resource Include="Windows\Exit2.png" />
     <Resource Include="Windows\Images\LoadingBackGround.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
