--- a/SolickManagerV3_4/SolickManagerV3_4.csproj
+++ b/SolickManagerV3_4/SolickManagerV3_4.csproj
@@ -11,19 +11,19 @@
     <None Remove="Pages\Add.png" />
     <None Remove="Pages\Delete.png" />
     <None Remove="Pages\Edit.png" />
-    <None Remove="Windows\Application.png" />
-    <None Remove="Windows\Assemblies.png" />
-    <None Remove="Windows\Clients.png" />
-    <None Remove="Windows\Exit2.png" />
+    <None Remove="Windows\Images\Application.png" />
+    <None Remove="Windows\Images\Assemblies.png" />
+    <None Remove="Windows\Images\Clients.png" />
+    <None Remove="Windows\Images\Exit2.png" />
     <None Remove="Windows\Images\LoadingBackGround.png" />
     <None Remove="Windows\Images\LoadingKrutVert.png" />
-    <None Remove="Windows\managment.png" />
-    <None Remove="Windows\money.png" />
-    <None Remove="Windows\otchet.png" />
-    <None Remove="Windows\Produxts.png" />
-    <None Remove="Windows\Service.png" />
-    <None Remove="Windows\settings.png" />
-    <None Remove="Windows\sklad.png" />
+    <None Remove="Windows\Images\managment.png" />
+    <None Remove="Windows\Images\money.png" />
+    <None Remove="Windows\Images\otchet.png" />
+    <None Remove="Windows\Images\Produxts.png" />
+    <None Remove="Windows\Images\Service.png" />
+    <None Remove="Windows\Images\settings.png" />
+    <None Remove="Windows\Images\sklad.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -40,23 +40,45 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Pages\Edit.png" />
-    <Resource Include="Windows\Application.png" />
-    <Resource Include="Windows\Assemblies.png" />
-    <Resource Include="Windows\Clients.png" />
-    <Resource Include="Windows\Exit2.png" />
+    <Resource Include="Windows\Images\Application.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Windows\Images\Assemblies.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Windows\Images\Clients.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Windows\Images\Exit2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Windows\Images\LoadingBackGround.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Windows\Images\LoadingKrutVert.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Windows\managment.png" />
-    <Resource Include="Windows\money.png" />
-    <Resource Include="Windows\otchet.png" />
-    <Resource Include="Windows\Produxts.png" />
-    <Resource Include="Windows\Service.png" />
-    <Resource Include="Windows\settings.png" />
-    <Resource Include="Windows\sklad.png" />
+    <Resource Include="Windows\Images\managment.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Windows\Images\money.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Windows\Images\otchet.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Windows\Images\Produxts.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Windows\Images\Service.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Windows\Images\settings.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Windows\Images\sklad.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
