--- a/SolickManagerV3_4/SolickManagerV3_4.csproj
+++ b/SolickManagerV3_4/SolickManagerV3_4.csproj
@@ -8,9 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Pages\Add.png" />
-    <None Remove="Pages\Delete.png" />
-    <None Remove="Pages\Edit.png" />
+    <None Remove="Pages\Images\Add.png" />
+    <None Remove="Pages\Images\Delete.png" />
+    <None Remove="Pages\Images\Edit.png" />
     <None Remove="Windows\Images\Application.png" />
     <None Remove="Windows\Images\Assemblies.png" />
     <None Remove="Windows\Images\Clients.png" />
@@ -35,11 +35,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Pages\Add.png" />
-    <Resource Include="Pages\Delete.png">
+    <Resource Include="Pages\Images\Add.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Pages\Edit.png" />
+    <Resource Include="Pages\Images\Delete.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Pages\Images\Edit.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Windows\Images\Application.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
