--- a/SolickManagerV3_4/SolickManagerV3_4.csproj
+++ b/SolickManagerV3_4/SolickManagerV3_4.csproj
@@ -9,8 +9,11 @@
 
   <ItemGroup>
     <None Remove="Pages\Images\Add.png" />
+    <None Remove="Pages\Images\Categories.png" />
+    <None Remove="Pages\Images\Characteristic.png" />
     <None Remove="Pages\Images\Delete.png" />
     <None Remove="Pages\Images\Edit.png" />
+    <None Remove="Pages\Images\ListProducts.png" />
     <None Remove="Windows\Images\Application.png" />
     <None Remove="Windows\Images\Assemblies.png" />
     <None Remove="Windows\Images\Clients.png" />
@@ -38,10 +41,19 @@
     <Resource Include="Pages\Images\Add.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Pages\Images\Categories.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Pages\Images\Characteristic.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Pages\Images\Delete.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Pages\Images\Edit.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Pages\Images\ListProducts.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Windows\Images\Application.png">
