--- a/SolickManagerV3_4/SolickManagerV3_4.csproj
+++ b/SolickManagerV3_4/SolickManagerV3_4.csproj
@@ -14,6 +14,8 @@
     <None Remove="Pages\Images\Delete.png" />
     <None Remove="Pages\Images\Edit.png" />
     <None Remove="Pages\Images\ListProducts.png" />
+    <None Remove="Pages\Images\Provider.png" />
+    <None Remove="Pages\Images\Shipment.png" />
     <None Remove="Windows\Images\Application.png" />
     <None Remove="Windows\Images\Assemblies.png" />
     <None Remove="Windows\Images\Clients.png" />
@@ -54,6 +56,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Pages\Images\ListProducts.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Pages\Images\Provider.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Pages\Images\Shipment.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Windows\Images\Application.png">
