--- a/SolickManagerV3_4/SolickManagerV3_4.csproj
+++ b/SolickManagerV3_4/SolickManagerV3_4.csproj
@@ -31,6 +31,7 @@
     <None Remove="Windows\Images\Service.png" />
     <None Remove="Windows\Images\settings.png" />
     <None Remove="Windows\Images\sklad.png" />
+    <None Remove="Windows\Images\SolulCompIcon.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -109,6 +110,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Windows\Images\sklad.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Windows\Images\SolulCompIcon.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
