--- a/SolickManagerV3_4/SolickManagerV3_4.csproj
+++ b/SolickManagerV3_4/SolickManagerV3_4.csproj
@@ -28,6 +28,7 @@
     <None Remove="Windows\Images\money.png" />
     <None Remove="Windows\Images\otchet.png" />
     <None Remove="Windows\Images\Produxts.png" />
+    <None Remove="Windows\Images\Selling.png" />
     <None Remove="Windows\Images\Service.png" />
     <None Remove="Windows\Images\settings.png" />
     <None Remove="Windows\Images\sklad.png" />
@@ -101,6 +102,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Windows\Images\Produxts.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Windows\Images\Selling.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Windows\Images\Service.png">
